feat: add first allotment list notification
- Added blue notification bar for first allotment list
- Included link to PDF document
- Published on 03.08.2025
- Maintained consistent styling with existing notifications"

--- a/admission.html
+++ b/admission.html
@@ -623,13 +623,13 @@
                         <td>Publication of First Allotment List</td>
                         <td>
                           03.08.2025
-                          <!-- <a
-                            href="/assets/pdf/BPHARM_FIRST_ALLOTMENT_2025.pdf"
+                          <a
+                            href="/assets/pdf/FIRST ALLOTTMENT LIST 2025-2026.pdf"
                             target="_blank"
                             style="margin-left: 10px; background-color: #28a745; color: white; padding: 4px 10px; text-decoration: none; border-radius: 4px;"
                           >
                             View
-                          </a> -->
+                          </a>
                         </td>
                       </tr>
                       <tr>
