--- a/index.html
+++ b/index.html
@@ -656,7 +656,17 @@
           </a>
         </p>
       </div>
-                                    <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
+      
+      <div class="notification-bar" style="background-color: #e6f7ff; padding: 10px; text-align: center; margin-top: 5px; border-left: 4px solid #0066cc;">
+        <p style="margin: 0; color: #0066cc;">
+          <strong>First Allotment List Published on 03.08.2025</strong>
+          <a href="/assets/pdf/FIRST ALLOTTMENT LIST 2025-2026.pdf" target="_blank" style="color: #0066cc; font-weight: bold; margin-left: 10px;">
+            View Allotment
+          </a>
+        </p>
+      </div>
+      
+      <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
         <p style="margin: 0; color: #333;"><strong>Second Allotment List Published!</strong> <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
       </div>
       <div class="notification-bar" style="margin-top: 2px; background-color: #f2f2f2; padding: 10px; text-align: center;">
