--- a/prospectus2025.html
+++ b/prospectus2025.html
@@ -565,6 +565,21 @@
                 </td>
                 <td style="border: 1px solid #ddd; padding: 10px">
                   03.08.2025
+
+                  <a
+                    href="/assets/pdf/FIRST ALLOTTMENT LIST 2025-2026.pdf"
+                    target="_blank"
+                    style="
+                      margin-left: 10px;
+                      background-color: #28a745;
+                      color: white;
+                      padding: 4px 10px;
+                      text-decoration: none;
+                      border-radius: 4px;
+                    "
+                  >
+                    View
+                  </a>
                 </td>
               </tr>
               <tr>
