--- a/notification.html
+++ b/notification.html
@@ -521,8 +521,8 @@
                         <td>Publication of First Allotment List</td>
                         <td>
                           03.08.2025
-                          <!-- <a
-                            href="/assets/pdf/BPHARM_FIRST_ALLOTMENT_2025.pdf"
+                          <a
+                            href="/assets/pdf/FIRST ALLOTTMENT LIST 2025-2026.pdf"
                             target="_blank"
                             style="
                               margin-left: 10px;
@@ -534,7 +534,7 @@
                             "
                           >
                             View
-                          </a> -->
+                          </a>
                         </td>
                       </tr>
                       <tr>
