--- a/index.html
+++ b/index.html
@@ -665,6 +665,19 @@
           </a>
         </p>
       </div>
+
+      <div class="notification-bar" style="background-color: #fff8e6; padding: 10px; text-align: center; margin-top: 5px; border-left: 4px solid #e68a00;">
+        <p style="margin: 0; color: #e68a00;">
+          <strong>Joining and Non-Joining Candidate Lists Published on 04.08.2025</strong>
+          <a href="/assets/pdf/Joinees-List-04-08-2025.pdf" target="_blank" style="color: #28a745; font-weight: bold; margin-left: 10px;">
+            Joinees List
+          </a>
+          <a href="/assets/pdf/Non-Joinees-List-04-08-2025.pdf" target="_blank" style="color: #dc3545; font-weight: bold; margin-left: 10px;">
+            Non-Joinees List
+          </a>
+        </p>
+      </div>
+      
       
       <!-- <div class="notification-bar" style="background-color: #f2f2f2; padding: 10px; text-align: center;">
         <p style="margin: 0; color: #333;"><strong>Second Allotment List Published!</strong> <a href="/assets/pdf/SECOND ALLOTMENT LIST.pdf" style="color: #0066cc; text-decoration: none; font-weight: bold;">Click here.</a></p>
@@ -2311,7 +2324,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 03-08-2025</span>                <p class="copyright-text">
+                <span>Last updated on 04-08-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
