--- a/notification.html
+++ b/notification.html
@@ -547,7 +547,21 @@
                         <td>
                           Publishing the Joining and Non-Joining Candidate List
                         </td>
-                        <td>04.08.2025</td>
+                        <td style="display: flex; flex-wrap: wrap; align-items: center; gap: 8px;">
+                          04.08.2025
+                          <div style="display: flex; flex-wrap: wrap; gap: 8px; margin-left: 8px;">
+                            <a href="/assets/pdf/Joinees-List-04-08-2025.pdf"
+                               target="_blank"
+                               style="background-color: #28a745; color: white; padding: 6px 12px; text-decoration: none; border-radius: 4px; font-size: 14px; white-space: nowrap; transition: all 0.2s ease;">
+                              Joinees List
+                            </a>
+                            <a href="/assets/pdf/Non-Joinees-List-04-08-2025.pdf"
+                               target="_blank"
+                               style="background-color: #dc3545; color: white; padding: 6px 12px; text-decoration: none; border-radius: 4px; font-size: 14px; white-space: nowrap; transition: all 0.2s ease;">
+                              Non-Joinees List
+                            </a>
+                          </div>
+                        </td>
                       </tr>
                       <tr>
                         <td class="text-center">8</td>
@@ -1294,7 +1308,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 03-08-2025</span>
+                <span>Last updated on 04-08-2025</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
