--- a/prospectus2025.html
+++ b/prospectus2025.html
@@ -594,8 +594,20 @@
                 <td style="border: 1px solid #ddd; padding: 10px">
                   Publishing the Joining & Non-Joining Candidate List
                 </td>
-                <td style="border: 1px solid #ddd; padding: 10px">
+                <td style="border: 1px solid #ddd; padding: 10px; display: flex; flex-wrap: wrap; align-items: center; gap: 8px;">
                   04.08.2025
+                  <div style="display: flex; flex-wrap: wrap; gap: 8px; margin-left: auto;">
+                    <a href="/assets/pdf/Joinees-List-04-08-2025.pdf"
+                       target="_blank"
+                       style="background-color: #28a745; color: white; padding: 6px 12px; text-decoration: none; border-radius: 4px; font-size: 14px; white-space: nowrap; transition: all 0.2s ease;">
+                      Joinees List
+                    </a>
+                    <a href="/assets/pdf/Non-Joinees-List-04-08-2025.pdf"
+                       target="_blank"
+                       style="background-color: #dc3545; color: white; padding: 6px 12px; text-decoration: none; border-radius: 4px; font-size: 14px; white-space: nowrap; transition: all 0.2s ease;">
+                      Non-Joinees List
+                    </a>
+                  </div>
                 </td>
               </tr>
               <tr>
@@ -934,7 +946,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 03-08-2025</span>
+                <span>Last updated on 04-08-2025</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
