feat: update last modified date to 05-08-2025 and add second allotment list notification

--- a/index.html
+++ b/index.html
@@ -643,7 +643,7 @@
           Click here to Learn About Admission and Important Dates!
         </a>
         <a href="notification.html" style="color: green; text-decoration: none; font-weight: bold;">
-          B.Pharm 2025-26: Rank List Published on 03.08.2025 
+          B.Pharm 2025-26: Second Allotment List Published on 05.08.2025
         </a>
       </div>
       
@@ -674,6 +674,15 @@
           </a>
           <a href="/assets/pdf/Non-Joinees-List-04-08-2025.pdf" target="_blank" style="color: #dc3545; font-weight: bold; margin-left: 10px;">
             Non-Joinees List
+          </a>
+        </p>
+      </div>
+
+      <div class="notification-bar" style="background-color: #e6f7ff; padding: 10px; text-align: center; margin-top: 5px; border-left: 4px solid #0066cc;">
+        <p style="margin: 0; color: #0066cc;">
+          <strong>Second Allotment List Published on 05.08.2025</strong>
+          <a href="/assets/pdf/SECOND_ALLOTMENT_LIST.pdf" target="_blank" style="color: #0066cc; font-weight: bold; margin-left: 10px;">
+            View Allotment
           </a>
         </p>
       </div>
@@ -2324,7 +2333,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 04-08-2025</span>                <p class="copyright-text">
+                <span>Last updated on 05-08-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
