--- a/notification.html
+++ b/notification.html
@@ -547,17 +547,53 @@
                         <td>
                           Publishing the Joining and Non-Joining Candidate List
                         </td>
-                        <td style="display: flex; flex-wrap: wrap; align-items: center; gap: 8px;">
+                        <td
+                          style="
+                            display: flex;
+                            flex-wrap: wrap;
+                            align-items: center;
+                            gap: 8px;
+                          "
+                        >
                           04.08.2025
-                          <div style="display: flex; flex-wrap: wrap; gap: 8px; margin-left: 8px;">
-                            <a href="/assets/pdf/Joinees-List-04-08-2025.pdf"
-                               target="_blank"
-                               style="background-color: #28a745; color: white; padding: 6px 12px; text-decoration: none; border-radius: 4px; font-size: 14px; white-space: nowrap; transition: all 0.2s ease;">
+                          <div
+                            style="
+                              display: flex;
+                              flex-wrap: wrap;
+                              gap: 8px;
+                              margin-left: 8px;
+                            "
+                          >
+                            <a
+                              href="/assets/pdf/Joinees-List-04-08-2025.pdf"
+                              target="_blank"
+                              style="
+                                background-color: #28a745;
+                                color: white;
+                                padding: 6px 12px;
+                                text-decoration: none;
+                                border-radius: 4px;
+                                font-size: 14px;
+                                white-space: nowrap;
+                                transition: all 0.2s ease;
+                              "
+                            >
                               Joinees List
                             </a>
-                            <a href="/assets/pdf/Non-Joinees-List-04-08-2025.pdf"
-                               target="_blank"
-                               style="background-color: #dc3545; color: white; padding: 6px 12px; text-decoration: none; border-radius: 4px; font-size: 14px; white-space: nowrap; transition: all 0.2s ease;">
+                            <a
+                              href="/assets/pdf/Non-Joinees-List-04-08-2025.pdf"
+                              target="_blank"
+                              style="
+                                background-color: #dc3545;
+                                color: white;
+                                padding: 6px 12px;
+                                text-decoration: none;
+                                border-radius: 4px;
+                                font-size: 14px;
+                                white-space: nowrap;
+                                transition: all 0.2s ease;
+                              "
+                            >
                               Non-Joinees List
                             </a>
                           </div>
@@ -566,7 +602,23 @@
                       <tr>
                         <td class="text-center">8</td>
                         <td>Publication of Second Allotment</td>
-                        <td>05.08.2025</td>
+                        <td>
+                          05.08.2025
+                          <a
+                            href="/assets/pdf/SECOND_ALLOTMENT_LIST.pdf"
+                            target="_blank"
+                            style="
+                              margin-left: 10px;
+                              background-color: #28a745;
+                              color: white;
+                              padding: 4px 10px;
+                              text-decoration: none;
+                              border-radius: 4px;
+                            "
+                          >
+                            View
+                          </a>
+                        </td>
                       </tr>
                       <tr>
                         <td class="text-center">9</td>
@@ -1308,7 +1360,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 04-08-2025</span>
+                <span>Last updated on 05-08-2025</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
