--- a/notification.html
+++ b/notification.html
@@ -630,7 +630,24 @@
                         <td>
                           Publishing the Joining and Non-Joining Candidate List
                         </td>
-                        <td>11.08.2025</td>
+                        <td>11.08.2025
+                          <a
+                          href="/assets/pdf/SECOND ALLOTMENT JOINING LIST.pdf"
+                          target="_blank"
+                          style="
+                            background-color: #28a745;
+                            color: white;
+                            padding: 6px 12px;
+                            text-decoration: none;
+                            border-radius: 4px;
+                            font-size: 14px;
+                            white-space: nowrap;
+                            transition: all 0.2s ease;
+                          "
+                        >
+                          Joinees List
+                        </a>
+                        </td>
                       </tr>
                       <tr>
                         <td class="text-center">11</td>
@@ -1360,7 +1377,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 05-08-2025</span>
+                <span>Last updated on 11-08-2025</span>
                 <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
