Update contact numbers and last updated dates across multiple HTML files
- Replaced the existing contact number +91 7034555559 with two new numbers: +91 8943600017 and +91 7034555563 in the following files:
  - 404.html
  - about-us.html
  - academic-leadership.html
  - admission.html
  - announcements.html
  - annual-reports.html
  - anti-ragging-cell.html
  - bpharm.html
  - careers.html
  - circulars-and-notices.html
  - code-of-conduct.html
  - computer-application.html
  - contact.html
  - forgot-password.html
  - gallery.html
  - gender-sensitisation-committee.html
  - index.html
  - library.html
  - login.html
  - news-detail.html
  - news.html
  - newsletters.html
  - notification.html
  - pharmaceutical-analysis.html
  - pharmaceutical-chemistry.html
  - pharmaceutics.html
  - pharmacognosy.html
  - pharmacology.html
  - pharmacy-practice.html
  - prospectus2025.html

- Updated the last modified date from 12-08-2025 to 18-09-2025 in the same files.

--- a/gender-sensitisation-committee.html
+++ b/gender-sensitisation-committee.html
@@ -56,7 +56,8 @@
                     </div>
                     <div class="header-top-contact-info">
                       <h6>Call Now</h6>
-                      <a href="tel:+917034555559">+91 7034555559</a>
+                        <a href="tel:+918943600017">+91 8943600017</a>,
+                        <a href="tel:+917034555563">+91 7034555563</a>
                     </div>
                   </li>
                 </ul>
@@ -487,9 +488,12 @@
                     Road, Manoor, Edappal,<br />
                     Malappuram, Kerala 679578
                   </li>
-                  <li>
-                    <a href="tel:+917034555559"
-                      ><i class="far fa-phone"></i>+91 7034555559</a
+                  <li>              
+                    <a href="tel:+918943600017"
+                      ><i class="far fa-phone"></i>+91 8943600017</a
+                    >,
+                    <a href="tel:+917034555563"
+                      >+91 7034555563</a
                     >
                   </li>
                   <li>
@@ -611,7 +615,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 12-08-2025</span>                <p class="copyright-text">
+                <span>Last updated on 18-09-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
