--- a/circulars-and-notices.html
+++ b/circulars-and-notices.html
@@ -56,7 +56,8 @@
                     </div>
                     <div class="header-top-contact-info">
                       <h6>Call Now</h6>
-                      <a href="tel:+917034555559">+91 7034555559</a>
+                        <a href="tel:+918943600017">+91 8943600017</a>,
+                        <a href="tel:+917034555563">+91 7034555563</a>
                     </div>
                   </li>
                 </ul>
@@ -434,9 +435,12 @@
                   </p> -->
                 <h4 class="footer-widget-title">Contact Us</h4>
                 <ul class="footer-contact">
-                  <li>
-                    <a href="tel:+917034555559"
-                      ><i class="far fa-phone"></i>+91 7034555559</a
+                  <li>              
+                    <a href="tel:+918943600017"
+                      ><i class="far fa-phone"></i>+91 8943600017</a
+                    >,
+                    <a href="tel:+917034555563"
+                      >+91 7034555563</a
                     >
                   </li>
                   <li>
@@ -554,7 +558,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 12-08-2025</span>                <p class="copyright-text">
+                <span>Last updated on 18-09-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
