--- a/newsletters.html
+++ b/newsletters.html
@@ -52,7 +52,8 @@
                     </div>
                     <div class="header-top-contact-info">
                       <h6>Call Now</h6>
-                      <a href="tel:+917034555559">+91 7034555559</a>
+                        <a href="tel:+918943600017">+91 8943600017</a>,
+                        <a href="tel:+917034555563">+91 7034555563</a>
                     </div>
                   </li>
                 </ul>
