--- a/pharmacy-practice.html
+++ b/pharmacy-practice.html
@@ -52,7 +52,8 @@
                     </div>
                     <div class="header-top-contact-info">
                       <h6>Call Now</h6>
-                      <a href="tel:+917034555559">+91 7034555559</a>
+                        <a href="tel:+918943600017">+91 8943600017</a>,
+                        <a href="tel:+917034555563">+91 7034555563</a>
                     </div>
                   </li>
                 </ul>
@@ -562,7 +563,7 @@
               <div class="copyright-wrapper">
                 <div class="row">
                   <div class="col-md-6 align-self-center">
-                    <span>Last updated on 12-08-2025</span>                    <p class="copyright-text">
+                    <span>Last updated on 18-09-2025</span>                    <p class="copyright-text">
                       &copy; Copyright <span id="date"></span>
                       <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                       Rights Reserved.
