--- a/prospectus2025.html
+++ b/prospectus2025.html
@@ -64,7 +64,8 @@
                     </div>
                     <div class="header-top-contact-info">
                       <h6>Call Now</h6>
-                      <a href="tel:+917034555559">+91 7034555559</a>
+                        <a href="tel:+918943600017">+91 8943600017</a>,
+                        <a href="tel:+917034555563">+91 7034555563</a>
                     </div>
                   </li>
                 </ul>
@@ -840,9 +841,12 @@
               <div class="footer-widget-box about-us">
                 <h4 class="footer-widget-title">Contact Us</h4>
                 <ul class="footer-contact">
-                  <li>
-                    <a href="tel:+917034555559"
-                      ><i class="far fa-phone"></i>+91 7034555559</a
+                  <li>              
+                    <a href="tel:+918943600017"
+                      ><i class="far fa-phone"></i>+91 8943600017</a
+                    >,
+                    <a href="tel:+917034555563"
+                      >+91 7034555563</a
                     >
                   </li>
                   <li>
