Update last updated dates to 29-10-2025 across multiple HTML files

--- a/index.html
+++ b/index.html
@@ -640,12 +640,9 @@
       </div> -->
 
       <div class="marquee">
-        <a href="notification.html">
-          Click here to Learn About Admission and Important Dates!
-        </a>
-        <a href="notification.html" style="color: green; text-decoration: none; font-weight: bold;">
-          B.Pharm 2025-26: Second Allotment List Published on 05.08.2025
-        </a>
+        <span>
+          Spot Allotment for B.Pharm Admission 2025–2026 (Management Quota) will be conducted on 30.10.2025 as per ASC guidelines. Eligible candidates are requested to report at Malabar College of Pharmacy with all original certificates
+        </span>
       </div>
       
       <!-- <div class="notification-bar" style="background-color: #e6ffe6; padding: 10px; text-align: center; margin-top: 5px;">
@@ -2349,7 +2346,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 18-09-2025</span>                <p class="copyright-text">
+                <span>Last updated on 29-10-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
