--- a/login.html
+++ b/login.html
@@ -145,7 +145,7 @@
             <div class="container">
                 <div class="col-md-5 mx-auto">
                     <div class="login-form">
-                        <!-- <div class="login-header">
+                        <div class="login-header">
                             <img src="assets/img/logo/logo.png" alt="logo" style="width: 200px; height: 150px; object-fit: cover;">
                             <p>Login with your MCP account</p>
                         </div>
@@ -172,18 +172,18 @@
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
                             </div>
-                        </form> -->
+                        </form>
 
-                        <div class="application-closed-notice" style="text-align: center; padding: 20px;">
+                        <!-- <div class="application-closed-notice" style="text-align: center; padding: 20px;">
                           <h4 style="color: #cc0000;">Application process is now closed.</h4>
                           <p>Rank list and allotments have been published below.</p>
                         </div>
-                        
+                         -->
 
                         <!-- Application and Result Announcements -->
-                        <div class="application-closed-notice">
+                        <!-- <div class="application-closed-notice">
                           <p>Application closed on 02.08.2025.</p>
-                        </div>
+                        </div> -->
 
                         <!-- <div class="rank-list-announcement">
                           <p>Rank list published on 03.08.2025.<br>
@@ -203,9 +203,9 @@
 
 
                         
-                        <!-- <div class="login-footer">
+                        <div class="login-footer">
                             <p>Don't have an account? <a href="register.html">Register.</a></p>
-                        </div> -->
+                        </div>
                     </div>
                 </div>
             </div>
