Update last updated date to 18-12-2025 across multiple HTML files

--- a/pharmaceutics.html
+++ b/pharmaceutics.html
@@ -441,6 +441,16 @@
                   <td rowspan="1">Semester I</td>
                   <td>Pharmaceutics - I</td>
                 </tr>
+                <tr>
+                  <td rowspan="4">Semester III</td>
+                  <td>Physical Pharmaceutics - I</td>
+                </tr>
+                <tr>
+                  <td>Pharmaceutical Microbiology</td>
+                </tr>
+                <tr>
+                  <td>Pharmaceutical Engineering</td>
+                </tr>
               </tbody>
             </table>
           </div>
@@ -599,7 +609,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 16-12-2025</span>                <p class="copyright-text">
+                <span>Last updated on 18-12-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
