--- a/pharmaceutical-chemistry.html
+++ b/pharmaceutical-chemistry.html
@@ -456,6 +456,10 @@
                 <tr>
                   <td>Biochemistry</td>
                 </tr>
+                <tr>
+                  <td rowspan="1">Semester III</td>
+                  <td>Pharmaceutical Organic Chemistry - II</td>
+                </tr>
               </tbody>
             </table>
           </div>
@@ -614,7 +618,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 16-12-2025</span>                <p class="copyright-text">
+                <span>Last updated on 18-12-2025</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
