--- a/login.html
+++ b/login.html
@@ -145,7 +145,7 @@
             <div class="container">
                 <div class="col-md-5 mx-auto">
                     <div class="login-form">
-                        <div class="login-header">
+                        <!-- <div class="login-header">
                             <img src="assets/img/logo/logo.png" alt="logo" style="width: 200px; height: 150px; object-fit: cover;">
                             <p>Login with your MCP account</p>
                         </div>
@@ -172,7 +172,7 @@
                                     <i class="fas fa-spinner fa-spin"></i>
                                 </div>
                             </div>
-                        </form>
+                        </form> -->
 
                         <div class="application-closed-notice" style="text-align: center; padding: 20px;">
                           <h4 style="color: #cc0000;">Application process is now closed.</h4>
