fix: correct indentation and formatting in multiple HTML files

--- a/notification.html
+++ b/notification.html
@@ -95,7 +95,7 @@
                   <i class="far fa-search"></i>
                 </button>
               </div>
-              <!-- <div class="nav-right-btn mt-2">
+             <div class="nav-right-btn mt-2">
                 <a
                   href="login.html"
                   class="theme-btn"
@@ -103,7 +103,7 @@
                 >
                   Apply Now
                 </a>
-              </div> -->
+              </div>
 
               <button
                 class="navbar-toggler"
