--- a/pharmacy-practice.html
+++ b/pharmacy-practice.html
@@ -91,7 +91,7 @@
                   <i class="far fa-search"></i>
                 </button>
               </div>
-                            <!-- <div class="nav-right-btn mt-2">
+                           <div class="nav-right-btn mt-2">
                 <a
                   href="login.html"
                   class="theme-btn"
@@ -99,7 +99,7 @@
                 >
                   Apply Now
                 </a>
-              </div> -->
+              </div>
 
               <button
                 class="navbar-toggler"
@@ -347,12 +347,12 @@
 <li class="nav-item">
                   <a class="nav-link" href="notification.html">Notification</a>
                 </li>
-                                 <!-- <div class="nav-right">
+                                 <div class="nav-right">
                   <div class="nav-right-btn mt-2">
                     <a href="login.html" class="theme-btn"
                       ><span class="fal fa-pencil"></span>Apply Now</a
                     >
-                  </div> -->
+                  </div>
                 </div>       
          </ul>
             </div>
@@ -563,7 +563,7 @@
               <div class="copyright-wrapper">
                 <div class="row">
                   <div class="col-md-6 align-self-center">
-                    <span>Last updated on 05-01-2026</span>                    <p class="copyright-text">
+                    <span>Last updated on 19-02-2026</span>                    <p class="copyright-text">
                       &copy; Copyright <span id="date"></span>
                       <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                       Rights Reserved.
