--- a/index.html
+++ b/index.html
@@ -160,15 +160,15 @@
                   <i class="far fa-search"></i>
                 </button>
               </div>
-                            <!-- <div class="nav-right-btn mt-2">
+                            <div class="nav-right-btn mt-2">
                 <a
                   href="login.html"
                   class="theme-btn"
                   style="padding: 8px 10px"
                 >
-                  Apply Now
+                  Login
                 </a>
-              </div> -->
+              </div>
 
               <button
                 class="navbar-toggler"
@@ -416,12 +416,12 @@
 <li class="nav-item">
                   <a class="nav-link" href="notification.html">Notification</a>
                 </li>
-                                 <!-- <div class="nav-right">
+                                 <div class="nav-right">
                   <div class="nav-right-btn mt-2">
                     <a href="login.html" class="theme-btn"
-                      ><span class="fal fa-pencil"></span>Apply Now</a
+                      ><span class="fal fa-pencil"></span>Login</a
                     >
-                  </div> -->
+                  </div>
                 </div>       
   
                 </div>
@@ -639,11 +639,11 @@
         </div>
       </div> -->
 
-      <div class="marquee">
+      <!-- <div class="marquee">
         <span>
           Applications are invited for B.Pharm Lateral Entry. Date: 02-02-2026
         </span>
-      </div>
+      </div> -->
       
       <!-- <div class="notification-bar" style="background-color: #e6ffe6; padding: 10px; text-align: center; margin-top: 5px;">
         <p style="margin: 0; color: #006600;">
@@ -2346,7 +2346,7 @@
           <div class="copyright-wrapper">
             <div class="row">
               <div class="col-md-6 align-self-center">
-                <span>Last updated on 05-01-2026</span>                <p class="copyright-text">
+                <span>Last updated on 19-02-2026</span>                <p class="copyright-text">
                   &copy; Copyright <span id="date"></span>
                   <a href="https://connect.edentu.com/">Edentu Pvt Ltd</a> All
                   Rights Reserved.
