--- a/library.html
+++ b/library.html
@@ -91,7 +91,7 @@
                   <i class="far fa-search"></i>
                 </button>
               </div>
-                            <!-- <div class="nav-right-btn mt-2">
+                           <div class="nav-right-btn mt-2">
                 <a
                   href="login.html"
                   class="theme-btn"
@@ -99,7 +99,7 @@
                 >
                   Apply Now
                 </a>
-              </div> -->
+              </div>
 
               <button
                 class="navbar-toggler"
@@ -347,12 +347,12 @@
 <li class="nav-item">
                   <a class="nav-link" href="notification.html">Notification</a>
                 </li>
-                                 <!-- <div class="nav-right">
+                                 <div class="nav-right">
                   <div class="nav-right-btn mt-2">
                     <a href="login.html" class="theme-btn"
                       ><span class="fal fa-pencil"></span>Apply Now</a
                     >
-                  </div> -->
+                  </div>
                 </div>       
          </ul>
             </div>
